--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
             <article>
                 <img src="Resources/assets/images/Fig1.png" alt="Tempurature Map" class="big_img" width=50% style="float: left">
                 <br>
-                <p>In this project, we created a Python script to visualize and analyze various climate factors of over 500 cities across the world of varying distance from the equator. To accomplish this analysis, we utilized several Python libraries, the OpenWeatherMap API, and some statistical analysis techniques to create a representative model of weather across world cities.</p>
-                <p>To elaborate on the whole processes, we pulled weather data from the OpenWeatherMap API to assemble a dataset with Pandas on over 500 cities. Then, we used Matplotlib to plot various climate factors vs. latitude, which include max temperature, humidity, cloudiness, and wind speed. Next off, we performed linear regression on each climate factor vs. latitude for our analysis. The result is shown in depth on each visualization page.</p>
+                <p>The purpose of this project was to analyze how weaher changes as you get closer to the equator.  To accomplish this analysis, we fisrst pull data from the OpenWeatherMap API to assemble a dataset of 500 cities.</p>
+                <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude.  Factors we looked at included: temperature, cloudiness, wind speed, and humidity.  
+                    This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptiosn of any trends and correlations witnessed</p>
             </article>
         </div>
         
